# appscope

./: .clang-format  .dockerignore  .gdbinit  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  azure-pipelines.yml  backtrace_filter.txt  bootstrap  cleanup_after_start.sh  configure.ac  deploy.sh  extract_symbols.sh  install_build_tools.sh  interpose_status.sh  libscope.map  platform  scope.sh  scope_env.sh  scopetypes.h  statx_exists.c  test.json
cli/: .gitignore  .golangci.yml  Makefile  Makefile.am  ScopeManager.postman_collection.json  TODO  VERSION  bump_go_deps.sh  docker-demo.sh  go.mod  go.sum  main.go  tools.go
cli/bolton/: bolton.go
cli/bpf/: bpfsys.go  info.go  link.go  loader.go  program.go  sigdel.go
cli/bpf/sigdel/: sigdel.bpf.c  sigdel.go
cli/clients/: clients.go  groups.go  message.go  services.go  unix.go
cli/cmd/: attach.go  bolton.go  completion.go  coredump.go  daemon.go  dash.go  detach.go  events.go  excrete.go  extract.go  filter.go  flows.go  history.go  inspect.go  k8s.go  listener.go  live.go  logs.go  manager.go  metrics.go  promserver.go  prune.go  ps.go  relay.go  root.go  rules.go  run.go  service.go  snapshot.go  start.go  stop.go  update.go  util.go  version.go  watch.go
cli/coredump/: coredump.go
cli/crash/: crash.go  setup.go
cli/daemon/: daemon.go  send.go
cli/demo/: Dockerfile  entrypoint.sh
cli/demo/demo-scripts/: goHttps  https.go  https.sh  log.py  wontsee.txt
cli/events/: events.go  events_test.go
cli/filter/: filter.go
cli/flows/: flow.go  flow_file_test.go  flow_test.go  gen_flow_test.sh
cli/history/: sessions.go  sessions_test.go
cli/inspect/: inspect.go
cli/internal/: config.go  version.go
cli/ipc/: ipc.go  ipc_test.go  ipcmeta.go  ipcns.go  ipcns_test.go  ipcscope.go  mq.go  mq_test.go
cli/k8s/: configs.go  index.js  server.go  template.go  util.go  webhook.go  webhook_test.go
cli/libscope/: config.go  event.go  filter.go  header.go  metric.go  rules.go
cli/listener/: listener.go  processor.go
cli/live/: handlers.go  message.go  net.go  scopes.go  services.go
cli/loader/: loader.go
cli/logger/: logger.go
cli/metrics/: dogstats_test.go  dogstatsd.go  metric.go  metric_test.go
cli/notify/: file_notifier.go  slack.go  slack_notifier.go
cli/pidfd/: pidfd.go
cli/promserver/: promserver.go
cli/ps/: sessions.go  sessions_test.go
cli/relay/: clients.go  config.go  cribl.go  net.go  queue.go  services.go  unix.go
cli/rules/: rules.go
cli/run/: attach.go  excrete.go  run.go  run_test.go  scopeconfig.go  scopeconfig_test.go  service.go  setup.go  setup_test.go  start.go
cli/snapshot/: setup.go  snapshot.go
cli/start/: setup.go  start.go  stop.go
cli/stop/: stop.go
cli/testscripts/: fast.sh  foo-every.py  foo-print.py  foo-stdout.py  k8s.sh  millionevents.py  sh-echo.sh  simplehttp.py  tenKreqs.sh
cli/update/: update.go
cli/util/: ipc.go  ipccmd.go  mq.go  mq_test.go  namespace.go  namespace_test.go  newlinereader.go  newlinereader_test.go  permissions.go  proc.go  proc_test.go  scopestate.go  signal.go  table.go  table_test.go  util.S  util.go  util_test.go
cli/web/: handlers.go  services.go
contrib/coredumper/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  config.guess  configure  configure.ac  preconfig  svn-commit.tmp
src/: .gitignore  Makefile.am  atomic.h  backoff.c  backoff.h  bashmem.c  bashmem.h  cfg.c  cfg.h  cfgutils.c  cfgutils.h  circbuf.c  circbuf.h  com.c  com.h  coredump.c  coredump.h  count.c  count.h  ctl.c  ctl.h  dbg.c  dbg.h  dns.h  evt.c  evt.h  evtformat.c  evtformat.h  evtutils.c  evtutils.h  fhook.h  fhook_stub.c  fn.c  fn.h  format.c  format.h  gocontext.S  gocontext.fix  gocontext.h  gocontext.old  (+96 more)
src/loader/: attach.c  attach.h  inject.c  inject.h  libdir.c  libdir.h  libver.c  libver.h  loader.c  loader.h  loaderelf.c  loaderelf.h  loaderop.c  loaderop.h  loaderutils.c  loaderutils.h  ns.c  ns.h  nsfile.c  nsfile.h  nsinfo.c  nsinfo.h  patch.c  patch.h  scopedyn.c  scopetypes.h  setup.c  setup.h
test/: .gitignore  Dockerfile  Makefile.am  README.md  access_rights.sh  backofftest.c  cfgtest.c  cfgutilstest.c  circbuftest.c  comtest.c  ctltest.c  dbgtest.c  dnstest.c  evtformattest.c  evttest.c  execute.sh  formattest.c  glibcvertest.c  httpaggtest.c  httpheadertest.c  httpstatetest.c  ipctest.c  javabcitest.c  libdirtest.c  libstatetest.c  libvertest.c  linklisttest.c  logtest.c  mtcformattest.c  mtctest.c  nsinfotest.c  nstest.c  options.sh  outtest.c  reporttest.c  run_integ.sh  scopecfgtest.c  searchtest.c  selfinterposetest.c  setuptest.c  (+10 more)
test/altp/: Makefile
test/altp/common/: main.c
test/conf/: scope.cfg  scope.yml
test/data/: filter_0.yml  filter_1.yml  filter_3.yml  filter_4.yml  filter_5.yml  filter_6.yml
test/integration/: Makefile  OVERVIEW.md  README.md  docker-compose.aarch64.yml  docker-compose.riscv64.yml  docker-compose.x86_64.yml  docker-compose.yml  docker-entrypoint.sh  file  scope-profile.sh
test/ltp_test_runner/: .runner.conf  runner.py  watcher.py
test/manual/: .gitignore  JavaTest.java  Makefile  SSL_read.c  SetCfg.json  armtimer.c  clonetest.c  closefd.c  consoletest.c  consoletest2.c  consoletest3.c  cycleclock.c  dns_query.c  dns_response_parse.c  envloop.c  forkwithoutexec.c  gosym.c  interpose_tests.sh  ipcclient.c  k8s_dev_start.sh  loadStatic.c  logevt.c  mountC.c  mygrep.c  passfd.c  pscoped.sh  readclass.c  reconn.sh  reportonclose.c  shmserver.c  simpleopenreadclose.c  socket_diag.c  stringsearch.c  tcpclient.c  tcpserver.c  tcpserver.go  tcpserver2.go  test.c  testssl.py  tlstest.c  (+3 more)
test/testContainers/: .dockerignore  Makefile  OVERVIEW.md  README.md  buildrunall.sh  buildrungo.sh  docker-compose.aarch64.yml  docker-compose.override.azure.yml  docker-compose.override.template.yml  docker-compose.override.yml  docker-compose.override.yml.disabled  docker-compose.privileged.yml  docker-compose.x86_64.yml  docker-compose.yml  run  runall.sh  rungo.sh  runner  scope-profile.sh
test/unit/: access_rights.sh  execute.sh  undefined_sym.sh  unixpeer.sh  verboten_sym.sh
(+1420 files in other folders)
